Fixed minor spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -71,4 +71,5 @@
 .external-link-image {
 	max-width: 30px;
 	max-height: 30px;
+	margin-bottom: 5px;
 }
